Implementing debug and variable selections from the footer in v7. Adding a payment block that reflects the current paths.

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -18,3 +18,13 @@
     }
 }
 
+.nhsuk-footer a[href="?debug=false"],
+.nhsuk-footer[data-type="pecs"] a[href="?type=pecs"],
+.nhsuk-footer[data-type="decs"] a[href="?type=decs"],
+.nhsuk-footer[data-letter="enquiry"] a[href="?letter=enquiry"],
+.nhsuk-footer[data-letter="pcn"] a[href="?letter=pcn"],
+.nhsuk-footer[data-letter="scn"] a[href="?letter=scn"],
+.nhsuk-footer[data-status="default"] a[href="?status=default"],
+.nhsuk-footer[data-status="dd-blocked"] a[href="?status=dd-blocked"] {
+   font-weight: 600;
+}
