--- a/app/views/v7/date-of-birth.html
+++ b/app/views/v7/date-of-birth.html
@@ -1,15 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block pageTitle %}{{ serviceName }} - What is your date of birth?{% endblock %}
-
-{% block outerContent %}
-{{ backLink({
-href: 'javascript:history.back();',
-text: "Go back"
-}) }}
-{% endblock %}
-
-
+{% block pageTitle %}What is your date of birth? - {{ serviceName }}{% endblock %}
 
 {% block content %}
 <div class="nhsuk-grid-row">
@@ -17,45 +8,46 @@ text: "Go back"
 
     <form action="date-of-birth" method="post" novalidate>
 
+      <span class="nhsuk-caption-m">Your details</span>
       {{ dateInput({
       id: 'dateOfBirth',
       namePrefix: 'dateOfBirth',
       fieldset: {
-      legend: {
-      text: 'What is your date of birth?',
-      classes: 'nhsuk-label--l',
-      isPageHeading: true
-      }
+        legend: {
+          text: 'What is your date of birth?',
+          classes: 'nhsuk-label--l',
+          isPageHeading: true
+        }
       },
       hint: {
-      text: 'For example, 15 3 1984'
+        text: 'For example, 31 3 1980'
       },
       items: [
-      {
-      name: 'day',
-      classes: 'nhsuk-input--width-2',
-      value: data.dateOfBirth.day
-      },
-      {
-      name: 'month',
-      classes: 'nhsuk-input--width-2',
-      value: data.dateOfBirth.month
-      },
-      {
-      name: 'year',
-      classes: 'nhsuk-input--width-4',
-      value: data.dateOfBirth.year
-      }
+        {
+          name: 'day',
+          classes: 'nhsuk-input--width-2',
+          value: data.dateOfBirth.day
+        },
+        {
+          name: 'month',
+          classes: 'nhsuk-input--width-2',
+          value: data.dateOfBirth.month
+        },
+        {
+          name: 'year',
+          classes: 'nhsuk-input--width-4',
+          value: data.dateOfBirth.year
+        }
       ]
       }) }}
 
 
       {{ button({
-      text: 'Continue'
+        text: 'Continue'
       }) }}
 
 
-      <p><a href="respond-to-your-letter">Cancel</a></p>
+      <p><a href="start">Cancel</a></p>
 
 
   </div>
