--- a/app/views/v7/enter-reference-number.html
+++ b/app/views/v7/enter-reference-number.html
@@ -1,14 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block pageTitle %}{{ serviceName }} - What is your reference number?{% endblock %}
-
-{% block outerContent %}
-{{ backLink({
-href: 'javascript:history.back();',
-text: "Go back"
-}) }}
-{% endblock %}
-
+{% block pageTitle %}What is your reference number? - {{ serviceName }}{% endblock %}
 
 {% block content %}
 <div class="nhsuk-grid-row">
@@ -19,18 +11,18 @@ text: "Go back"
       <span class="nhsuk-caption-m">Your details</span>
 
       {{ input({
-      label: {
-      text: 'What is your reference number?',
-      classes: 'nhsuk-label--l',
-      isPageHeading: true
-      },
-      hint: {
-      text: 'You can find this on your letter. Only include numbers in your reference number.'
-      },
-      id: 'referenceNumber',
-      name: 'referenceNumber',
-      value: data.referenceNumber,
-      classes: 'nhsuk-input--width-10'
+        label: {
+          text: 'What is your reference number?',
+          classes: 'nhsuk-label--l',
+          isPageHeading: true
+        },
+        hint: {
+          text: 'You can find this on your letter. Only include numbers in your reference number.'
+        },
+        id: 'referenceNumber',
+        name: 'referenceNumber',
+        value: data.referenceNumber,
+        classes: 'nhsuk-input--width-10'
       }) }}
 
       {{ button({
