--- a/app/views/v7/cannot-find-your-details.html
+++ b/app/views/v7/cannot-find-your-details.html
@@ -10,15 +10,9 @@
     <span class="nhsuk-caption-m">Your details</span>
     <h1 class="nhsuk-heading-l">We cannot find your details</h1>
 
+    <p>We have been unable to confirm your identity using the information you've provided. Check your answers and change any that are incorrect.</p>
 
-    <form action="enter-reference-number" method="post" class="form">
-      <p>We have been unable to confirm your identity using the information you've provided. Check your answers and
-        change
-        any that are incorrect.</p>
-
-      {% from 'tables/macro.njk' import table %}
-
-      {{ table({
+    {{ table({
       responsive: false,
       panel: false,
       firstCellIsHeader: true,
@@ -50,8 +44,9 @@
       ]
       }) }}
 
+    <form action="cannot-find-your-details" method="post" novalidate>
       {{ button({
-      text: 'Try again'
+        text: 'Try again'
       }) }}
     </form>
 
