--- a/app/views/v7/pcn-details.html
+++ b/app/views/v7/pcn-details.html
@@ -8,23 +8,22 @@ Penalty Charge Notice
 
 
 {% block content %}
-
-
-
-{% if data.type == "pecs"%}
-  <p>This content is shown only when type is PECS and letter is an enquiry for the Enquiry route.</p>
-  {% elif data.letter == "enquiry" %}
-  <p>This content is shown only when letter is for the enquiry route</p>
-  {% endif %}
   
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       
       <form action="pcn-details" method="post" class="form">
+      
       <span class="nhsuk-caption-m">Your details</span>
-      <h1>
-        Penalty Charge Notice 01234567890
-      </h1>
+      {% if data.letter === 'enquiry' %}
+        <h1 class="nhsuk-heading-l">Enquiry letter reference 01234567890</h1>
+      {% else %}
+        <h1 class="nhsuk-heading-l">Penalty Charge Notice 01234567890</h1>
+      {% endif %}
+
+
+
+
 
       {{ warningCallout({
         heading: "Do not delay",
@@ -34,12 +33,20 @@ Penalty Charge Notice
           these charges.</p>"
       }) }}
 
-      {% from '../'+version+'/macros/payment-block.njk' import paymentBlock %}
-      {{ paymentBlock( data, 'true' ) }}
+
+      {% if data.letter !== 'enquiry' %}
+
+        <!-- PAYMENT BLOCK-->
+        {% from '../'+version+'/macros/payment-block.njk' import paymentBlock %}
+        {{ paymentBlock( data, 'true' ) }}
+
+        <p class="nhsuk-body">If you have recently made a payment, it can take 24 hours for payment information to update.</p>
+
+      {% endif %}
 
      
 
-      <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
+
 
       <dl class="nhsuk-summary-list">
 
