--- a/app/views/v7/index.html
+++ b/app/views/v7/index.html
@@ -55,6 +55,10 @@
                     {
                         value: 'pcn',
                         text: 'Penalty Charge Notice (PCN)'
+                    },
+                    {
+                        value: 'scn',
+                        text: 'Surcharge'
                     }
                 ]
             }) }}
@@ -82,6 +86,29 @@
                     {
                         value: 'dd-blocked',
                         text: 'DD blocked (KYC failed three times)'
+                    }
+                ]
+            }) }}
+
+            {{ radios({
+                idPrefix: 'exemption',
+                name: 'exemption',
+                value: data.exemption,
+                fieldset: {
+                    legend: {
+                        text: 'What type of exemption?',
+                        classes: 'nhsuk-fieldset__legend--s',
+                        isPageHeading: false
+                    }
+                },
+                items: [
+                    {
+                        value: 'bsa',
+                        text: 'NHS BSA'
+                    },
+                    {
+                        value: 'dwp',
+                        text: 'DWP'
                     }
                 ]
             }) }}
