--- a/app/views/v7/pay-by-card.html
+++ b/app/views/v7/pay-by-card.html
@@ -1,90 +1,64 @@
 {% extends 'layout.html' %}
 
-{% set mainClasses = "nhsuk-main-wrapper--s" %}
+{% block pageTitle %}Pay by card - {{ serviceName }}{% endblock %}
 
-{% block pageTitle %}
-Pay by card
-{% endblock %}
-
-{% block outerContent %}
-{{ backLink({
-href: 'javascript:history.back();',
-text: "Go back"
-}) }}
+{% block beforeContent %}
+  {{ backLink({
+    href: 'javascript:history.back();',
+    text: 'Go back'
+  }) }}
 {% endblock %}
 
 {% block content %}
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <form action="pay-by-card" method="post" class="form">
+
+    <form action="pay-by-card" method="post" novalidate>
+
       <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
       <h1 class="nhsuk-heading-l">Pay by card</h1>
-      {{ card({
-      heading: "Penalty charge notice amount",
-      headingLevel: "3",
-      descriptionHtml: '
 
-      <dl class="nhsuk-summary-list">
-        <div class="nhsuk-summary-list__row">
-          <dt class="nhsuk-summary-list__key">
-            Total amount
-          </dt>
-          <dd class="nhsuk-summary-list__value">
-            £57.90
-          </dd>
-        </div>
-      </dl>
-      <h4>Previous payments</h4>
-      <dl class="nhsuk-summary-list">
-        <div class="nhsuk-summary-list__row">
-          <dt class="nhsuk-summary-list__key">
-            Payments made
-          </dt>
-          <dd class="nhsuk-summary-list__value">
-            £7.90
-          </dd>
-        </div>
-      </dl>
-      <h2>Amount still to pay: £50</h2>'
-      }) }}
-      <p>You can either pay the full amount in one payment or split it across several payments.</p>
-      <p>If you have recently made a payment, it can take up to 24 hours for payment information to update.</p>
+      <!-- PAYMENT BLOCK-->
+      {% from '../'+version+'/macros/payment-block.njk' import paymentBlock %}
+      {{ paymentBlock( data, ['showCard','showLastRowOnly'] ) }}
+
+      <p class="nhsuk-body">You can either pay the full amount in one payment or split it across several payments.</p>
+      <p class="nhsuk-body">If you have recently made a payment, it can take up to 24 hours for payment information to update.</p>
 
       {{ radios({
-      idPrefix: "amount",
-      name: "amount",
-      fieldset: {
-      legend: {
-      text: "Do you want to pay the full amount still to pay?",
-      classes: "nhsuk-fieldset__legend--l",
-      isPageHeading: true
-      }
-      },
-      items: [
-      {
-      value: "fullAmount",
-      text: "Yes, I want to pay the full amount"
-      },
-      {
-      value: "partialPayment",
-      text: "No, I want to make a partial payment"
-      }
-      ]
-      }) }}
-
-      <div class="nhsuk-form-group">
-        {{ button({
-        text: 'Continue'
+        idPrefix: 'amount',
+        name: 'amount',
+        value: data.amount,
+        fieldset: {
+          legend: {
+            text: 'Do you want to pay the full amount still to pay?',
+            classes: 'nhsuk-fieldset__legend--l',
+            isPageHeading: true
+          }
+        },
+          items: [
+            {
+              value: 'fullAmount',
+              text: 'Yes, I want to pay the full amount'
+            },
+            {
+              value: 'partialPayment',
+              text: 'No, I want to make a partial payment'
+            }
+          ]
         }) }}
-        <p><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
-      </div>
 
+        {{ button({
+          text: 'Continue'
+        }) }}
 
+        <p class="nhsuk-body"><a href="penalty-charge-notice-details-bsa">Cancel</a></p>
 
     </form>
+
+
   </div>
 </div>
-
 
 {% endblock %}
