--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
@@ -60,29 +60,38 @@ You are not entitled to free NHS prescriptions
         </div>
 
 
-
-
-
         <form action="accept-pcn-EXPEDITE-v2" method="post" novalidate>
+
+
+            <h2 class="nhsuk-heading-m">Do not accept the penalty charge</h2>
+
+            <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+            <p>Check the details on your prescription.</p>
+            <p>If you do not confirm you were entitled to free NHS prescriptions we will send a Penalty Charge Notice.</p>
+
+
+            <h2 class="nhsuk-heading-m">Accept the penalty charge</h2>
+
+            <p>If you accept the penalty charge today you confirm that you:</p>
+            <ul class="nhsuk-list nhsuk-list--bullet">
+                <li>were not entitled to free NHS prescriptions</li>
+                <li>understand that you must make a payment or set up a Direct Debit within 31 days</li>
+            </ul>
 
             {{ checkboxes({
                 idPrefix: 'acceptPCNDeclaration',
                 name: 'acceptPCNDeclaration',
                 fieldset: {
-                    legend: {
-                        text: 'Tick to accept the penalty charge',
-                        isPageHeading: false,
-                        classes: 'nhsuk-fieldset__legend--m'
-                    }
+                legend: {
+                    text: 'Tick the box if you accept the following statements',
+                    isPageHeading: false,
+                    classes: 'nhsuk-u-visually-hidden'
+                }
                 },
                 items: [
                     {
                         value: 'acceptCharge',
-                        text: 'I was not entitled to free NHS prescriptions and accept my penalty charge'
-                    },
-                    {
-                        value: 'acceptTiming',
-                        text: 'I understand that I must make a payment or set up a Direct Debit within 31 days from today'
+                        text: 'I confirm and accept my penalty charge'
                     }
                 ]
             }) }}
@@ -94,13 +103,8 @@ You are not entitled to free NHS prescriptions
         </form>
 
 
-        {{ actionLink({
-            href: 'enquiry-letter-details',
-            text: 'I do not want to accept the penalty charge now',
-            classes: 'nhsuk-u-margin-top-6'
-        }) }}
 
-        <!--<p class="nhsuk-body nhsuk-u-margin-top-6"><a href="enquiry-letter-details" class="nhsuk-link">Do not accept penalty charge</a></p>-->
+        <p class="nhsuk-body nhsuk-u-margin-top-6"><a href="respond-to-your-letter" class="nhsuk-link">Cancel</a></p>
 
     
 
