--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
@@ -66,7 +66,7 @@ You are not entitled to free NHS prescriptions
             <h2 class="nhsuk-heading-m">Do not accept the penalty charge</h2>
 
             <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
-            <p>Check the details on your prescription.</p>
+            <p><a class="nhsuk-link" href="#">Check the details on your prescription</a></p>
             <p>If you do not confirm you were entitled to free NHS prescriptions we will send a Penalty Charge Notice.</p>
 
 
