--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2-b.html
@@ -1,10 +1,18 @@
 {% extends 'layout.html' %}
 
+{% set title = 'Review your penalty charge' %}
+
 {% block pageTitle %}
-You are not entitled to free NHS prescriptions
+    {{ title }}
 {% endblock %}
 
 
+{% block beforeContent %}
+    {{ backLink({
+        text: 'Go back',
+        href: 'javascript:history.back();'
+    }) }}
+{% endblock %}
 
 
 {% block content %}
@@ -15,12 +23,7 @@ You are not entitled to free NHS prescriptions
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-
-
-    
-
-
-    <h1 class="nhsuk-heading-l">Review your penalty charge</h1>
+    <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
     {{ warningCallout({
         heading: 'Important information',
@@ -66,7 +69,7 @@ You are not entitled to free NHS prescriptions
             <h2 class="nhsuk-heading-m">Do not accept the penalty charge</h2>
 
             <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by {{ 28 | alterTodaysDateByNumberOfDays }}). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
-            <p><a class="nhsuk-link" href="#">Check the details on your prescription</a></p>
+            <p><a class="nhsuk-link" href="enquiry-letter-details">Check the details on your prescription</a></p>
             <p>If you do not confirm you were entitled to free NHS prescriptions we will send a Penalty Charge Notice.</p>
 
 
