--- a/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2.html
+++ b/app/views/v5-enquiry/accept-pcn-EXPEDITE-v2.html
@@ -1,26 +1,25 @@
 {% extends 'layout.html' %}
 
+{% set title = 'Review your penalty charge' %}
+
 {% block pageTitle %}
-You are not entitled to free NHS prescriptions
+    {{ title }}
 {% endblock %}
 
 
+{% block beforeContent %}
+    {{ backLink({
+        text: 'Go back',
+        href: 'javascript:history.back();'
+    }) }}
+{% endblock %}
 
 
 {% block content %}
-
-
-
-
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-
-
-    
-
-
-    <h1 class="nhsuk-heading-l">Review your penalty charge</h1>
+    <h1 class="nhsuk-heading-l">{{ title }}</h1>
 
     {{ warningCallout({
         heading: 'Important information',
